# knowledge-l-learned

./: .gitignore  Activity源码分析.md  Android-MemoInfo.md  BST-RK3229唤醒需求.md  DeadLock.java  HMA.md  Hello.java  README.md  Respeaker2.0使用.md  Singleton.java  android-event-dispatch-intro.md  android-handler-intro.md  android-hashmap-intro.md  android-inputmethod-manager-intro.md  android-lifecycle-activity-intro.md  as-build-intro.md  asr_test.py  effective-java.md  father.java  generic-erasure.md  git-usage  git-usage.md  groovy-intro.md  http-api-design.md  interview.md  java-collections.md  java-collections.wsd  lifecycle-input-service-intro.md  object-oriented-design.md  recorderdesign.wsd  thread-intro.md  unicode-intro.md  小度音箱开机体验.md  近场问题.md
4L_Lite_X1000/: 4L_Lite_X1000_V9.1.0使用过程记录.md  AggregationSDK build.md  (+2 more)
cmakelearn/Demo4/: CMakeLists.txt  config.h.in  main.cc
cmakelearn/Demo4/math/: CMakeLists.txt
cmakelearn/Demo4/vs2017/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Demo.vcxproj  Demo.vcxproj.filters  Demo4.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config.h
cmakelearn/Demo4/vs2017/Debug/: Demo.ilk
cmakelearn/Demo4/vs2017/Demo.dir/Debug/Demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Demo.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmakelearn/Demo4/vs2017/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
(+91 files in other folders)
